--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -366,6 +366,8 @@ jobs:
           pwd
           ls -al ./
           echo "${{ secrets.npmrc }}" > .npmrc
+          apt install -y libc6-compat bash make gcc g++ python3 python2 cyrus-sasl-dev pkgconf librdkafka-dev
+
       - name: node
         run: |
           npm install -include=dev
