EZR-12173 Another image

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -377,7 +377,7 @@ jobs:
       - name: Python2 as Python
         if: inputs.Python2AsPython
         run: |
-          update-alternatives --list python
+          alias python=python2
       - name: node
         run: |
           npm install -include=dev
