--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -372,7 +372,7 @@ jobs:
           pwd
           ls -al ./
           echo "${{ secrets.npmrc }}" > .npmrc
-          sudo apt update && sudo apt install -y bash make gcc g++ python3 python2 pkgconf librdkafka-dev
+          sudo apt update && sudo apt install -y bash make gcc g++ python3 python2 pkgconf librdkafka-dev chromium-browser
           npm i puppeteer
       - name: Python2 as Python
         if: inputs.Python2AsPython
