--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -386,7 +386,7 @@ jobs:
       - name: karma tests
         if: true && !inputs.DisableKarmaTests
         run: |
-          sudo apt install -y chromium-browser libgbm-dev libnss3 libxss1 libasound2 libatk-bridge2.0-0 libgtk-3-0 libdrm2 libice6 libsm6 libxshmfence
+          sudo apt install -y chromium-browser ca-certificates fonts-liberation libasound2 libatk-bridge2.0-0 libatk1.0-0 libc6 libcairo2 libcups2 libdbus-1-3 libexpat1 libfontconfig1 libgbm1 libgcc1 libglib2.0-0 libgtk-3-0 libnspr4 libnss3 libpango-1.0-0 libpangocairo-1.0-0 libstdc++6 libx11-6 libx11-xcb1 libxcb1 libxcomposite1 libxcursor1 libxdamage1 libxext6 libxfixes3 libxi6 libxrandr2 libxrender1 libxss1 libxtst6 lsb-release wget xdg-utils
           npm i puppeteer
           npm run test:karma --no-sandbox
 
