--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -516,8 +516,8 @@ jobs:
       - name: authenticate to composer
         if: inputs.ApplicationLanguage == 'php'
         run: |
-          echo "{\"github-oauth\": {\"github.com\": \"${{secrets.numa-numa-token}}\"}}" >> > $GITHUB_WORKSPACE/auth.json
-          
+          echo "{\"github-oauth\": {\"github.com\": \"${{secrets.numa-numa-token}}\"}}" > $GITHUB_WORKSPACE/auth.json
+
       - name: Set up Docker Context for Buildx
         id: buildx-context
         run: |
