--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -432,6 +432,9 @@ jobs:
         env:
           runner: ${{needs.setup_variables.outputs.runners}}
 
+      - name: authenticate to composer
+        run: |
+          echo "{\"github-oauth\": {\"github.com\": \"${{secrets.numa-numa-token}}\"}}" > $GITHUB_WORKSPACE/auth.json
       - name: run Composer
         if: inputs.ApplicationLanguage == 'php'
         run: |
