--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -305,6 +305,11 @@ jobs:
         env:
           runner: ${{needs.setup_variables.outputs.runners}}
 
+      - name: authenticate to composer
+        if: inputs.ApplicationLanguage == 'php'
+        run: |
+          echo "{\"github-oauth\": {\"github.com\": \"${{secrets.numa-numa-token}}\"}}" > $GITHUB_WORKSPACE/auth.json
+          
       - name: run Composer
         if: inputs.ApplicationLanguage == 'php'
         run: |
