--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -276,7 +276,7 @@ jobs:
       DB_PORT: "3306"
       REDIS_HOST: localhost
       REDIS_PORT: "6379"
-      REDIS_DB: zebra-tests
+      REDIS_DB: 0
     runs-on: ${{needs.setup_variables.outputs.runners}}
     timeout-minutes: 15
     services:
