--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -342,9 +342,9 @@ jobs:
           make ${{ inputs.UseMakeTargets }} -O -k
       - name: migrate
         run: |
-          php artisan zebra:es-mapping --quiet
-          php artisan zebra:es-scripts --quiet
-          php artisan migrate:fresh --quiet
+          php artisan zebra:es-mapping -vvv -n
+          php artisan zebra:es-scripts -vvv -n
+          php artisan migrate:fresh -vvv -n
       - name: phpcs
         if: (success() || failure()) && inputs.ApplicationLanguage == 'php' && !inputs.SkipPhpcs
         run: |
