--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -279,6 +279,7 @@ jobs:
       REDIS_DB: 0
       ES_HOST: "127.0.0.1"
       ES_PORT: "9200"
+      AUTH_DOMAIN: "0EE2BEA7-87EC-4C45-81FB-04D1C871D975.wave.local"
 #    runs-on: ${{needs.setup_variables.outputs.runners}}
     runs-on: self-hosted
     timeout-minutes: 30
