--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -590,7 +590,7 @@ jobs:
         uses: docker/login-action@v3.0.0
         with:
           registry: ghcr.io
-          username: ${{ github.actor }}
+          username: ${{ github.repository_owner }}
           password: ${{ secrets.numa-numa-token }}
           ecr: false
 
