--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -296,6 +296,7 @@ jobs:
           docker run -d --env MYSQL_DATABASE=zebra-tests --env MYSQL_ROOT_PASSWORD=root -p 3306:3306 --name mariadb mariadb:10.1.16 
           docker run -d --name redis -p 6379:6379 --health-cmd "redis-cli ping" --health-interval 10s --health-timeout 5s --health-retries 5 redis:3.2.3-alpine
           sudo apt update && sudo apt install -y mysql-client
+          sleep 15
           mysql -h 127.0.0.1 -proot -u root zebra-tests < database/schema/mysql-schema.dump
       - name: authenticate to composer
         if: inputs.ApplicationLanguage == 'php'
