--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -280,8 +280,7 @@ jobs:
       ES_HOST: "127.0.0.1"
       ES_PORT: "9200"
       AUTH_DOMAIN: "0EE2BEA7-87EC-4C45-81FB-04D1C871D975.wave.local"
-#    runs-on: ${{needs.setup_variables.outputs.runners}}
-    runs-on: self-hosted
+    runs-on: ${{needs.setup_variables.outputs.runners}}
     timeout-minutes: 30
     steps:
       - name: pull code
@@ -368,7 +367,7 @@ jobs:
       CONFIG_API_URL: "http://api.domain"
       CONFIG_AUTH_URL: "http://api.domain/token"
       GITHUB_TOKEN: ${{ secrets.numa-numa-token }}
-    runs-on: self-hosted #${{needs.setup_variables.outputs.runners}}
+    runs-on: ${{needs.setup_variables.outputs.runners}}
     timeout-minutes: 15
     steps:
       - name: pull code
