add env before unit tests

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -345,6 +345,7 @@ jobs:
       - name: phpunit
         if: (success() || failure()) && inputs.ApplicationLanguage == 'php' && inputs.SkipUnitTests != true
         run: |
+          env
           composer exec -- phpunit
 
       - name: phpstan
