--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -348,7 +348,8 @@ jobs:
         run: |
           env
           composer exec -- phpunit
-
+          sleep 3000
+          
       - name: phpstan
         if: (success() || failure()) && inputs.ApplicationLanguage == 'php' && inputs.SkipUnitTests != true && inputs.EnablePhpstan
         run: |
