but it needs to be enabled always

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -350,6 +350,7 @@ jobs:
           composer exec -- phpunit
 
       - name: pause for a diagnosis
+        if: always()
         run: |
           until cat moveon &> /dev/null
           do
