--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -288,14 +288,14 @@ jobs:
         with:
           token: ${{ secrets.numa-numa-token }}
           submodules: recursive
-      - name: start mysql
+      - name: start mysql and redis
         run: |
           docker run -d --env MYSQL_DATABASE=zebra-tests --env MYSQL_ROOT_PASSWORD=root -p 3306:3306 --name mariadb mariadb:10.6.10
+          docker run -d --name redis -p 6379:6379 --health-cmd "redis-cli ping" --health-interval 10s --health-timeout 5s --health-retries 5 redis:3.2.3-alpine
       - name: elasticsearch and init mysql
         if: ${{ needs.setup_variables.outputs.app == 'zebra' }}
         run: |
           docker run -d --name es -v $(pwd)/database/scripts:/usr/share/elasticsearch/config/scripts -p 9200:9200 -p 9300:9300 elasticsearch:2.4.4 --script.engine.groovy.inline.aggs=on --logger.discovery=DEBUG --script.index=true --script.indexed=on
-          docker run -d --name redis -p 6379:6379 --health-cmd "redis-cli ping" --health-interval 10s --health-timeout 5s --health-retries 5 redis:3.2.3-alpine
           sudo apt update && sudo apt install -y mysql-client
           sleep 15
           mysql -h 127.0.0.1 -proot -u root zebra-tests < database/schema/mysql-schema.dump
