--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -457,6 +457,7 @@ jobs:
         uses: php-actions/behat@v1
         with:
           version: ${{ inputs.BehatVersion }}
+          php_version: ${{ inputs.PhpVersion }}
 
   manifest-generate:
     timeout-minutes: 5
